Fix search bar covering over navigation sub menus in search page

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1973,7 +1973,7 @@ span#profileFullname{
     }
     .osf-search {
         margin-top: -30px;
-        z-index: 1033; 
+        z-index: 1028; /* should be less than 1030 to not cover navbar */
     }
     #searchControls > .osf-search {
         margin-top: -30px;
